Fixed menu jumps while scroll

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     width: 100%;
     background: rgba(54,61,73,0.7);
     z-index: 5;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform : translate3d(0, 0, 0);
 }
 
 .scroll {
@@ -569,7 +571,7 @@ input[type=submit]:hover {
 
 /*CSS Height*/
 body, html, .container-fluid {
-height: 100 %;
+height: 100%;
 }
 
 body {
